--- a/index.css
+++ b/index.css
@@ -49,27 +49,6 @@ body::-webkit-scrollbar
   display: none;
   }
 
-  .wrapper_full
-  {
-  width: 100%;
-  height: 100vh;
-  position: relative;
-  z-index: 1;
-  }
-
-  .wrapper_layer
-  {
-  width: 300px;
-  height: 250px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  -webkit-transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-  z-index: 2;
-  }
-
 .flex_row /* flex 横並び */
   {
   display: flex;
@@ -94,34 +73,30 @@ body::-webkit-scrollbar
   align-items: stretch;
   }
 
-
-  /* row upper */
-.row_upper
+.wrapper_full
   {
-  display: flex;
-  /*縦に積む */
-  flex-flow: column nowrap;
-  /*中央揃え */
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-  width: 100vw;
-  height: 50vh;
+  width: 100%;
+  height: 100vh;
+  overflow: hidden;
   }
 
-  /* row bottom */
-.row_bottom
+.fix
   {
-  background-color: #000;
-  width: 100vw;
-  height: calc(100vh - 50vh);
+  position: sticky;
+  top: 0;
+  left: 0;
+  z-index: 999;
   }
-
 
 /* header */
 header.global_header
   {
-  padding: 10px;
+  /*background-image: url(img/cityscape.png);
+  background-position: center bottom;
+  background-size: contain;
+  background-repeat: no-repeat;
+  */
+  padding: 10px 0;
   }
 
 header.global_header h1
@@ -139,25 +114,49 @@ header.global_header h2
   letter-spacing: -0.09rem;
   }
 
+/* left column */
+.pane_left
+  {
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: space-between;
+  align-items: center;
+  text-align: center;
+  width: 260px;
+  min-width: 260px;
+  height: 100vh;
+  }
+
+/* right column */
+.pane_right
+  {
+  width: calc( 100vw - 260px);
+  }
 
 /* global navigation */
 .global_nav
   {
-  padding: 10px;
+  border-left: 0px solid #ddd;
+  border-right: 0px solid #ddd;
+  text-align: center;
+  padding: 5px;
   }
 
 .global_nav ul
   {
-  display: flex;
-  flex-flow: row nowrap;
+  border-left: 0px solid #ddd;
+  border-right: 0px solid #ddd;
+  margin-top: 10px;
   }
 
 .global_nav ul li
   {
+  border-bottom: 3px solid #f8f8f2;
+  border-radius: 15px;
   font-family: 'Yu Gothic Medium';
   letter-spacing: -0.05rem;
   font-size: 1.1rem;
-  margin: 0px auto;
+  margin: 15px auto;
   }
 
 .global_nav ul li.current_page
@@ -187,21 +186,24 @@ footer nav
   {
   border-top: 1px solid #ddd;
   border-bottom: 1px solid #ddd;
+  text-align: center;
   }
 
-.footer_social_links
+ul.footer_social_links
   {
-  display: flex;
-  flex-flow: row wrap;
-  justify-content: center;
+    display: flex;
+    display: -webkit-flex;
+    flex-flow: row nowrap;
+    justify-content: center;
+    padding: 15px;
   }
 
-.footer_social_links li
+ul.footer_social_links li
   {
   padding: 5px;
   }
 
-.footer_social_links li img
+ul.footer_social_links li img
   {
   width: 24px;
   height: 24px;
@@ -531,26 +533,4 @@ h2.taken_year
   border-radius: 5px;
   font-family: YuGothic;
 */
-  }
-
-ul.social_links
-  {
-  display: flex;
-  display: -webkit-flex;
-  flex-flow: row nowrap;
-  justify-content: center;
-  padding: 15px;
-  }
-
-ul.social_links li
-  {
-  margin: 10px;
-  padding: 5px;
-  }
-
-ul.social_links li img
-  {
-  width: 32px;
-  height: 32px;
-  opacity: 0.6;
   }
